--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url=demo/" />
+    <meta charset="utf-8"/>
+
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="existdb-login.html"/>
+
     <title>existdb-login</title>
+
   </head>
   <body>
     <h1>eXistdb login Demo</h1>
 
     <p>This page should not be shown unless authenticated as admin.</p>
+    <existdb-login></existdb-login>
+
+
   </body>
 </html>
