--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
-<!doctype html>
 <html>
   <head>
     <meta charset="utf-8"/>
-
-    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="existdb-login.html"/>
-
     <title>existdb-login</title>
 
   </head>
   <body>
     <h1>eXistdb login Demo</h1>
 
-    <p>This page should not be shown unless authenticated as admin.</p>
-    <existdb-login></existdb-login>
+    <h2 style="color:red;">This page should not be shown unless authenticated as admin.</h2>
 
+
+    <a href="index.html?logout=true">logout here</a>
 
   </body>
 </html>
