--- a/login.html
+++ b/login.html
@@ -3,22 +3,24 @@
     <meta charset="utf-8"/>
     <title>existdb-login</title>
 
-    <!--<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>-->
-    <!--<link rel="import" href="existdb-login.html"/>-->
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="existdb-login.html"/>
 
   </head>
   <body>
 
-    <!--<existdb-login target="index.html"></existdb-login>-->
+    <existdb-login target="index.html">&#160;</existdb-login>
 
+<!--
       <form class="form" id="form" action="index.html" method="post">
         <input type="hidden" name="origin" value="{$origin}" autocomplete="on"/>
         <input label="User ID" id="user" name="user" autofocus="autofocus" required="required"
-               value="{{user}}" error="Please input your username"/>
-        <input label="Password" type="password" id="password" name="password" value="{{pass}}"
+               error="Please input your username"/>
+        <input label="Password" type="password" id="password" name="password"
                error="Please input your password"/>
         <button type="submit" on-click="_handleSubmit">Sign me in</button>
       </form>
+-->
 
 
   </body>
