--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <title>existdb-login</title>
 
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="existdb-login.html"/>
+    <link rel="import" href="bower_components/existdb-login/existdb-login.html"/>
 
   </head>
   <body>
