very basic styling; fix in gulpfile.js

--- a/fail.html
+++ b/fail.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <existdb-login target="index.html" failed="true">&#160;</existdb-login>
+    <existdb-login target="index.html" failed="true" style="width:400px; height: 200px;">&#160;</existdb-login>
 
   </body>
 </html>
