--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <existdb-login target="index.html">&#160;</existdb-login>
+    <existdb-login target="index.html" style="width:400px; height: 200px;">&#160;</existdb-login>
 
 <!--
       <form class="form" id="form" action="index.html" method="post">
