--- a/existdb-login.html
+++ b/existdb-login.html
@@ -18,18 +18,25 @@
     <template>
         <style>
             :host {
-                display: block;
+                display: inline-flex;
+                min-width: 300px;
+                min-height: 260px;
+                border: 1px solid var(--paper-blue-grey-300);
+                position: relative;
+                flex-direction: column;
+                justify-content: center;
             }
 
             .wrapper {
-                width: 420px;
-                position: relative;
+                padding: 50px;
+                /*width:100%;*/
+                /*height:100%;*/
             }
 
             .form {
-                border: 1px solid var(--paper-blue-grey-300);
-                padding: 20px;
-                width:100%;
+                padding: 0;
+                margin: 0;
+                width: 100%;
 
             }
 
@@ -43,26 +50,24 @@
                 height: 30px;
                 font-size: 16px;
                 font-family: roboto;
-                position: absolute;
-                right: 0;
-                top: 158px;
             }
 
             paper-button {
-                margin: 0;
+                margin: 20px 0 0;
             }
         </style>
         <div class="wrapper">
-        <iron-form id="iform" allow-redirect="false">
-            <form class="form" id="form" action="{{target}}" method="post">
-                <input type="hidden" name="origin" autocomplete="on"/>
-                <paper-input name="user" id="user" value="{{user}}" autofocus required label="login ID"
-                             error="Please input your user ID"></paper-input>
-                <paper-input name="password" id="password" type="password" value="{{pass}}" autofocus label="password"
-                             error="Please input your password"></paper-input>
-                <paper-button on-click="_handleSubmit" raised>sign in</paper-button>
-            </form>
-        </iron-form>
+            <iron-form id="iform" allow-redirect="false">
+                <form class="form" id="form" action="{{target}}" method="post">
+                    <input type="hidden" name="origin" autocomplete="on"/>
+                    <paper-input name="user" id="user" value="{{user}}" autofocus required label="login ID"
+                                 error="Please input your user ID"></paper-input>
+                    <paper-input name="password" id="password" type="password" value="{{pass}}" autofocus
+                                 label="password"
+                                 error="Please input your password"></paper-input>
+                    <paper-button on-click="_handleSubmit" raised>sign in</paper-button>
+                </form>
+            </iron-form>
             <div id="message" class="message"></div>
         </div>
 
