added handler for return key -> submits form

--- a/existdb-login.html
+++ b/existdb-login.html
@@ -80,7 +80,7 @@
          *
          * @customElement
          * @polymer
-         * @demo demo/index.html
+         * @demo demo/restricted.html
          */
         class ExistdbLogin extends Polymer.Element {
 
