--- a/restricted.html
+++ b/restricted.html
@@ -7,10 +7,10 @@
   <body>
     <h1>eXistdb login Demo</h1>
 
-    <h2 style="color:green;">This page is for the public (no login required).</h2>
+    <h2 style="color:red;">This page should not be shown unless authenticated as admin.</h2>
 
 
-    <a href="restricted.html">login</a>
+    <a href="restricted.html?logout=true">logout here</a>
 
   </body>
 </html>
